{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 703,
  "lineage": "ac18bd37-4edd-adcd-af79-c002a623813c",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [
                  "amranwebapp-01357.azurewebsites.net"
                ],
                "id": "/subscriptions/fd7a0e48-ef92-4ae6-b1a7-6a62c6dd318d/resourceGroups/amran-rg-web-sql-db-demo-project/providers/Microsoft.Network/applicationGateways/myAppGateway/backendAddressPools/demo-project-BackendPool",
                "ip_addresses": [],
                "name": "demo-project-BackendPool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/fd7a0e48-ef92-4ae6-b1a7-6a62c6dd318d/resourceGroups/amran-rg-web-sql-db-demo-project/providers/Microsoft.Network/applicationGateways/myAppGateway/backendHttpSettingsCollection/demo-project-HTTPsetting",
                "name": "demo-project-HTTPsetting",
                "path": "",
                "pick_host_name_from_backend_address": true,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/fd7a0e48-ef92-4ae6-b1a7-6a62c6dd318d/resourceGroups/amran-rg-web-sql-db-demo-project/providers/Microsoft.Network/applicationGateways/myAppGateway/frontendIPConfigurations/demo-project-AGIPConfig",
                "name": "demo-project-AGIPConfig",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/fd7a0e48-ef92-4ae6-b1a7-6a62c6dd318d/resourceGroups/amran-rg-web-sql-db-demo-project/providers/Microsoft.Network/publicIPAddresses/myAGPublicIPAddress",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/fd7a0e48-ef92-4ae6-b1a7-6a62c6dd318d/resourceGroups/amran-rg-web-sql-db-demo-project/providers/Microsoft.Network/applicationGateways/myAppGateway/frontendPorts/demo-project-FrontendPort",
                "name": "demo-project-FrontendPort",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/fd7a0e48-ef92-4ae6-b1a7-6a62c6dd318d/resourceGroups/amran-rg-web-sql-db-demo-project/providers/Microsoft.Network/applicationGateways/myAppGateway/gatewayIPConfigurations/my-gateway-ip-configuration",
                "name": "my-gateway-ip-configuration",
                "subnet_id": "/subscriptions/fd7a0e48-ef92-4ae6-b1a7-6a62c6dd318d/resourceGroups/amran-rg-web-sql-db-demo-project/providers/Microsoft.Network/virtualNetworks/myVNet/subnets/myAGSubnet"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/fd7a0e48-ef92-4ae6-b1a7-6a62c6dd318d/resourceGroups/amran-rg-web-sql-db-demo-project/providers/Microsoft.Network/applicationGateways/myAppGateway/frontendIPConfigurations/demo-project-AGIPConfig",
                "frontend_ip_configuration_name": "demo-project-AGIPConfig",
                "frontend_port_id": "/subscriptions/fd7a0e48-ef92-4ae6-b1a7-6a62c6dd318d/resourceGroups/amran-rg-web-sql-db-demo-project/providers/Microsoft.Network/applicationGateways/myAppGateway/frontendPorts/demo-project-FrontendPort",
                "frontend_port_name": "demo-project-FrontendPort",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/fd7a0e48-ef92-4ae6-b1a7-6a62c6dd318d/resourceGroups/amran-rg-web-sql-db-demo-project/providers/Microsoft.Network/applicationGateways/myAppGateway/httpListeners/demo-project-Listener",
                "name": "demo-project-Listener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/fd7a0e48-ef92-4ae6-b1a7-6a62c6dd318d/resourceGroups/amran-rg-web-sql-db-demo-project/providers/Microsoft.Network/applicationGateways/myAppGateway",
            "identity": [],
            "location": "eastus",
            "name": "myAppGateway",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/fd7a0e48-ef92-4ae6-b1a7-6a62c6dd318d/resourceGroups/amran-rg-web-sql-db-demo-project/providers/Microsoft.Network/applicationGateways/myAppGateway/backendAddressPools/demo-project-BackendPool",
                "backend_address_pool_name": "demo-project-BackendPool",
                "backend_http_settings_id": "/subscriptions/fd7a0e48-ef92-4ae6-b1a7-6a62c6dd318d/resourceGroups/amran-rg-web-sql-db-demo-project/providers/Microsoft.Network/applicationGateways/myAppGateway/backendHttpSettingsCollection/demo-project-HTTPsetting",
                "backend_http_settings_name": "demo-project-HTTPsetting",
                "http_listener_id": "/subscriptions/fd7a0e48-ef92-4ae6-b1a7-6a62c6dd318d/resourceGroups/amran-rg-web-sql-db-demo-project/providers/Microsoft.Network/applicationGateways/myAppGateway/httpListeners/demo-project-Listener",
                "http_listener_name": "demo-project-Listener",
                "id": "/subscriptions/fd7a0e48-ef92-4ae6-b1a7-6a62c6dd318d/resourceGroups/amran-rg-web-sql-db-demo-project/providers/Microsoft.Network/applicationGateways/myAppGateway/requestRoutingRules/demo-project-RoutingRule",
                "name": "demo-project-RoutingRule",
                "priority": 1,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "amran-rg-web-sql-db-demo-project",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "WAF_v2",
                "tier": "WAF_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20150501",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": null,
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [
              {
                "disabled_rule_group": [],
                "enabled": true,
                "exclusion": [],
                "file_upload_limit_mb": 100,
                "firewall_mode": "Detection",
                "max_request_body_size_kb": 128,
                "request_body_check": true,
                "rule_set_type": "OWASP",
                "rule_set_version": "3.0"
              }
            ],
            "zones": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_linux_web_app.app",
            "azurerm_public_ip.pip",
            "azurerm_resource_group.amran-rg",
            "azurerm_service_plan.plan",
            "azurerm_subnet.frontend",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "plink-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/fd7a0e48-ef92-4ae6-b1a7-6a62c6dd318d/resourceGroups/amran-rg-web-sql-db-demo-project/providers/Microsoft.Network/loadBalancers/amran-plink-lb/frontendIPConfigurations/amran-plink--pip",
                "name": "amran-plink--pip",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/fd7a0e48-ef92-4ae6-b1a7-6a62c6dd318d/resourceGroups/amran-rg-web-sql-db-demo-project/providers/Microsoft.Network/publicIPAddresses/amran-plink--pip"
              }
            ],
            "id": "/subscriptions/fd7a0e48-ef92-4ae6-b1a7-6a62c6dd318d/resourceGroups/amran-rg-web-sql-db-demo-project/providers/Microsoft.Network/loadBalancers/amran-plink-lb",
            "location": "eastus",
            "name": "amran-plink-lb",
            "resource_group_name": "amran-rg-web-sql-db-demo-project",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.plink-pip",
            "azurerm_resource_group.plink-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web-app-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fd7a0e48-ef92-4ae6-b1a7-6a62c6dd318d/resourceGroups/amran-rg-web-sql-db-demo-project/providers/Microsoft.Network/networkSecurityGroups/demo-project-web-app-nsg",
            "location": "eastus",
            "name": "demo-project-web-app-nsg",
            "resource_group_name": "amran-rg-web-sql-db-demo-project",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.amran-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/fd7a0e48-ef92-4ae6-b1a7-6a62c6dd318d/resourceGroups/amran-rg-web-sql-db-demo-project/providers/Microsoft.Network/networkSecurityGroups/demo-project-web-app-nsg/securityRules/nsg-rule1",
            "name": "nsg-rule1",
            "network_security_group_name": "demo-project-web-app-nsg",
            "priority": 1001,
            "protocol": "*",
            "resource_group_name": "amran-rg-web-sql-db-demo-project",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web-app-nsg",
            "azurerm_resource_group.amran-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/fd7a0e48-ef92-4ae6-b1a7-6a62c6dd318d/resourceGroups/amran-rg-web-sql-db-demo-project/providers/Microsoft.Network/publicIPAddresses/myAGPublicIPAddress",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.174.43.96",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "myAGPublicIPAddress",
            "resource_group_name": "amran-rg-web-sql-db-demo-project",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.amran-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "plink-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/fd7a0e48-ef92-4ae6-b1a7-6a62c6dd318d/resourceGroups/amran-rg-web-sql-db-demo-project/providers/Microsoft.Network/publicIPAddresses/amran-plink--pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.228.146.219",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "amran-plink--pip",
            "resource_group_name": "amran-rg-web-sql-db-demo-project",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.plink-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "appserv",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.4.1.0/24"
            ],
            "delegation": [
              {
                "name": "service-delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/action"
                    ],
                    "name": "Microsoft.Web/serverFarms"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": true,
            "id": "/subscriptions/fd7a0e48-ef92-4ae6-b1a7-6a62c6dd318d/resourceGroups/amran-rg-web-sql-db-demo-project/providers/Microsoft.Network/virtualNetworks/amran-app-service-vnet/subnets/frontend-app",
            "name": "frontend-app",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": false,
            "resource_group_name": "amran-rg-web-sql-db-demo-project",
            "virtual_network_name": "amran-app-service-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.amran-rg",
            "azurerm_virtual_network.app-service-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.21.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fd7a0e48-ef92-4ae6-b1a7-6a62c6dd318d/resourceGroups/amran-rg-web-sql-db-demo-project/providers/Microsoft.Network/virtualNetworks/myVNet/subnets/myBackendSubnet",
            "name": "myBackendSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "amran-rg-web-sql-db-demo-project",
            "virtual_network_name": "myVNet"
          },
          "dependencies": [
            "azurerm_resource_group.amran-rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.21.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/fd7a0e48-ef92-4ae6-b1a7-6a62c6dd318d/resourceGroups/amran-rg-web-sql-db-demo-project/providers/Microsoft.Network/virtualNetworks/myVNet/subnets/myAGSubnet",
            "name": "myAGSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "amran-rg-web-sql-db-demo-project",
            "virtual_network_name": "myVNet"
          },
          "dependencies": [
            "azurerm_resource_group.amran-rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "plink-endpoint-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.4.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": true,
            "id": "/subscriptions/fd7a0e48-ef92-4ae6-b1a7-6a62c6dd318d/resourceGroups/amran-rg-web-sql-db-demo-project/providers/Microsoft.Network/virtualNetworks/amran-app-service-vnet/subnets/amran-plink-endpoint-subnet",
            "name": "amran-plink-endpoint-subnet",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": false,
            "resource_group_name": "amran-rg-web-sql-db-demo-project",
            "virtual_network_name": "amran-app-service-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.amran-rg",
            "azurerm_virtual_network.app-service-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "plink-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.5.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": true,
            "id": "/subscriptions/fd7a0e48-ef92-4ae6-b1a7-6a62c6dd318d/resourceGroups/amran-rg-web-sql-db-demo-project/providers/Microsoft.Network/virtualNetworks/demo-plink-vnet/subnets/amran-plink-subnet",
            "name": "amran-plink-subnet",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": false,
            "resource_group_name": "amran-rg-web-sql-db-demo-project",
            "virtual_network_name": "demo-plink-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.plink-rg",
            "azurerm_virtual_network.plink-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg-connect-webapp-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/fd7a0e48-ef92-4ae6-b1a7-6a62c6dd318d/resourceGroups/amran-rg-web-sql-db-demo-project/providers/Microsoft.Network/virtualNetworks/amran-app-service-vnet/subnets/frontend-app",
            "network_security_group_id": "/subscriptions/fd7a0e48-ef92-4ae6-b1a7-6a62c6dd318d/resourceGroups/amran-rg-web-sql-db-demo-project/providers/Microsoft.Network/networkSecurityGroups/demo-project-web-app-nsg",
            "subnet_id": "/subscriptions/fd7a0e48-ef92-4ae6-b1a7-6a62c6dd318d/resourceGroups/amran-rg-web-sql-db-demo-project/providers/Microsoft.Network/virtualNetworks/amran-app-service-vnet/subnets/frontend-app"
          },
          "dependencies": [
            "azurerm_network_security_group.web-app-nsg",
            "azurerm_resource_group.amran-rg",
            "azurerm_subnet.appserv",
            "azurerm_virtual_network.app-service-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "app-service-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.4.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "4a8c02e0-f95c-4d0c-ad24-da24be2b35b7",
            "id": "/subscriptions/fd7a0e48-ef92-4ae6-b1a7-6a62c6dd318d/resourceGroups/amran-rg-web-sql-db-demo-project/providers/Microsoft.Network/virtualNetworks/amran-app-service-vnet",
            "location": "eastus",
            "name": "amran-app-service-vnet",
            "resource_group_name": "amran-rg-web-sql-db-demo-project"
          },
          "dependencies": [
            "azurerm_resource_group.amran-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "plink-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.5.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f3596c16-27ac-4112-a9b8-ca5b8344b40f",
            "id": "/subscriptions/fd7a0e48-ef92-4ae6-b1a7-6a62c6dd318d/resourceGroups/amran-rg-web-sql-db-demo-project/providers/Microsoft.Network/virtualNetworks/demo-plink-vnet",
            "location": "eastus",
            "name": "demo-plink-vnet",
            "resource_group_name": "amran-rg-web-sql-db-demo-project"
          },
          "dependencies": [
            "azurerm_resource_group.plink-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.21.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "8c710464-2561-4c43-b0c7-61ced21ed1dd",
            "id": "/subscriptions/fd7a0e48-ef92-4ae6-b1a7-6a62c6dd318d/resourceGroups/amran-rg-web-sql-db-demo-project/providers/Microsoft.Network/virtualNetworks/myVNet",
            "location": "eastus",
            "name": "myVNet",
            "resource_group_name": "amran-rg-web-sql-db-demo-project"
          },
          "dependencies": [
            "azurerm_resource_group.amran-rg"
          ]
        }
      ]
    }
  ]
}